--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@electron/fuses": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "antd": "^5.21.1",
     "electron": "^32.1.2",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.30.0",
+    "react": "^18.3.1",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.8"
@@ -37,6 +40,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
