--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.13",
     "electron-squirrel-startup": "^1.0.1"
   }
 }
