--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "productName": "mercury",
   "version": "1.0.0",
   "description": "My Electron application description",
+  "keywords": [],
+  "license": "MIT",
+  "author": {
+    "name": "wensuneng",
+    "email": "vinceng1990@gmail.com"
+  },
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -10,6 +16,12 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
+  },
+  "dependencies": {
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
+    "dayjs": "^1.11.13",
+    "electron-squirrel-startup": "^1.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
@@ -31,20 +43,10 @@
     "react": "^18.3.1",
     "react-activation": "^0.12.4",
     "react-router-dom": "^6.26.2",
+    "sort-package-json": "^2.10.1",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.8"
   },
-  "keywords": [],
-  "author": {
-    "name": "wensuneng",
-    "email": "vinceng1990@gmail.com"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
-    "dayjs": "^1.11.13",
-    "electron-squirrel-startup": "^1.0.1"
-  }
+  "productName": "mercury"
 }
