--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "lint": "eslint --ext .ts,.tsx ."
   },
   "dependencies": {
-    "@types/react": "^18.3.9",
-    "@types/react-dom": "^18.3.0",
+
     "dayjs": "^1.11.13",
     "antd": "^5.21.1",
     "react": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "electron-squirrel-startup": "^1.0.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.5.0",
@@ -33,11 +32,14 @@
     "@electron-forge/maker-squirrel": "^7.5.0",
     "@electron-forge/maker-zip": "^7.5.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
+    "electron-squirrel-startup": "^1.0.1",
     "@electron-forge/plugin-fuses": "^7.5.0",
     "@electron-forge/plugin-vite": "^7.5.0",
     "@electron/fuses": "^1.8.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "electron": "^32.1.2",
     "eslint": "^8.57.1",
