--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lint": "eslint --ext .ts,.tsx ."
   },
   "dependencies": {
+    "@types/sqlite3": "^3.1.11",
     "antd": "^5.21.1",
     "dayjs": "^1.11.13",
+    "http-proxy": "^1.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
