--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "import": "node src/sqlite3/import.js"
   },
   "dependencies": {
     "@types/sqlite3": "^3.1.11",
     "antd": "^5.21.1",
+    "csv-parser": "^3.1.0",
     "dayjs": "^1.11.13",
     "http-proxy": "^1.18.1",
     "react": "^18.3.1",
