--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 lerna-debug.log*
 
 # database.db
+/data/database.db
 database.db
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
