--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "export": "node src/sqlite3/script/export-trans.js"
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.8",
     "@antv/g2": "^4.2.11",
     "@types/papaparse": "^5.3.15",
     "@types/sqlite3": "^3.1.11",
