--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ lerna-debug.log*
 
 # database.db
 # /data/database.db
-# database.db*
+# # database.db*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
