--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 
 # database.db
-# /data/database.db
-# # database.db*
+/data/database.db
+database.db*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
