--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "remove": "node scripts/del-all-trans.js",
     "import-json": "node scripts/import-json.js",
     "export": "node scripts/export-trans.js",
-    "replace": "node scripts/batch-replace.js"
+    "replace": "node scripts/batch-replace.js",
+    "pipeline": "node scripts/pipeline.js"
   },
   "dependencies": {
     "@antv/data-set": "^0.11.8",
@@ -31,6 +32,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/sqlite3": "^3.1.11",
     "antd": "^5.21.1",
+    "chalk": "^4.1.2",
     "csv-parser": "^3.1.0",
     "dayjs": "^1.11.13",
     "http-proxy": "^1.18.1",
