--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "import-rules": "node scripts/import-rules.js",
     "import-a": "node scripts/import-advanced-rules.js",
     "import-trans": "node scripts/import-trans.js",
-    "remove": "node scripts/del-all-trans.js",
+    "remove": "node scripts/del-all-trans.js && node scripts/del-all-advance.js",
     "import-json": "node scripts/import-json.js",
     "export": "node scripts/export-trans.js",
     "replace": "node scripts/batch-replace.js",
