--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   "dependencies": {
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^4.2.11",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/papaparse": "^5.3.15",
     "@types/sqlite3": "^3.1.11",
     "antd": "^5.21.1",
