--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/sqlite3": "^3.1.11",
     "antd": "^5.21.1",
     "chalk": "^4.1.2",
+    "classnames": "^2.5.1",
     "csv-parser": "^3.1.0",
     "dayjs": "^1.11.13",
     "http-proxy": "^1.18.1",
+    "lunar-typescript": "^1.7.8",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
