--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
+    "lint:fix": "eslint --ext .ts,.tsx . --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "fix": "npm run lint:fix && npm run format",
     "init": "node scripts/create-table.js",
     "import-rules": "node scripts/import-rules.js",
     "import-a": "node scripts/import-advanced-rules.js",
@@ -66,7 +70,10 @@
     "electron": "^32.1.2",
     "electron-squirrel-startup": "^1.0.1",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "3.5.3",
     "react-activation": "^0.12.4",
     "sort-package-json": "^2.10.1",
     "ts-node": "^10.9.2",
