--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,13 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true
+      }
+    ],
+    "quotes": ["error", "single"]
   },
   "settings": {
     "import/resolver": {
