--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "printWidth": 100,
+  "trailingComma": "all",
+  "printWidth": 80,
   "bracketSpacing": true,
   "endOfLine": "lf"
 }
