--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dayjs": "^1.11.13",
     "http-proxy": "^1.18.1",
     "lunar-typescript": "^1.7.8",
+    "mitt": "^3.0.1",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
