--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "classnames": "^2.5.1",
     "csv-parser": "^3.1.0",
     "dayjs": "^1.11.13",
+    "electron-store": "^8.2.0",
     "http-proxy": "^1.18.1",
     "lunar-typescript": "^1.7.8",
     "mitt": "^3.0.1",
