--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "import-a": "node scripts/import-advanced-rules.js",
     "import-trans": "node scripts/import-trans.js",
     "remove": "node scripts/del-all-trans.js && node scripts/del-all-advance.js",
+    "remove:dev": "node scripts/del-all-trans.js --dev && node scripts/del-all-advance.js --dev",
     "import-json": "node scripts/import-json.js",
     "export": "node scripts/export-trans.js",
     "replace": "node scripts/batch-replace.js",
