--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,16 @@
 {
   "semi": true,
-  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 80,
   "bracketSpacing": true,
   "useTabs": false,
+  "prettier/prettier": [
+    "error",
+    {
+      "singleQuote": false,
+      "parser": "flow"
+    }
+  ],
   "endOfLine": "lf"
 }
