--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "prettier": "3.5.3",
+    "eslint-plugin-prettier": "^5.2.4",
+    "eslint-plugin-react": "^7.37.4",
+    "prettier": "^3.5.3",
     "react-activation": "^0.12.4",
     "sort-package-json": "^2.10.1",
     "ts-node": "^10.9.2",
