--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,11 @@
 {
   "semi": true,
+  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
-  "printWidth": 80,
+  "trailingComma": "es5",
   "bracketSpacing": true,
-  "useTabs": false,
-  "prettier/prettier": [
-    "error",
-    {
-      "singleQuote": false,
-      "parser": "flow"
-    }
-  ],
-  "endOfLine": "lf"
+  "jsxBracketSameLine": false,
+  "arrowParens": "avoid",
+  "printWidth": 100,
+  "endOfLine": "auto"
 }
