--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,14 +10,12 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:import/recommended",
     "plugin:import/electron",
-    "plugin:import/typescript",
-    "plugin:prettier/recommended"
+    "plugin:import/typescript"
+    // "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "prettier"],
-  "rules": {
-   
-  },
+  "rules": {},
   "settings": {
     "import/resolver": {
       "typescript": {}
