--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lunar-typescript": "^1.7.8",
     "mitt": "^3.0.1",
     "papaparse": "^5.5.2",
+    "puppeteer": "^24.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
